# terminal_heatmap

./: CMakeLists.txt  README.md
include/: Color.h  Temperature.h  TerminalHeatmap.h
src/: Color.cpp  Temperature.cpp  TerminalHeatmap.cpp  TestTerminalHeatmap.cpp
